<resources>
    <string name="app_name">IFSP Notification</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_about">About</string>
    <string name="title_activity_login">IFSP Notification</string>

    <!-- Strings related to login -->
    <string name="prompt_prontuario">Records</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This record is invalid</string>
    <string name="error_invalid_text">Text field is empty</string>
    <string name="error_invalid_password">This password is empty or too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to service -->
    <string name="url_base">http://192.168.0.16:8000/</string>
    <!--<string name="url_base">http://192.168.43.94:8000/</string>-->
    <!--<string name="url_base">https://notificacaoifsp.herokuapp.com/</string>&lt;!&ndash;site&ndash;&gt;-->
    <string name="url_login">api-token-auth/</string>
    <string name="url_login_username">username</string>
    <string name="url_login_password">password</string>

    <string name="url_student">aluno_json/</string>
    <string name="url_employee">servidor_json/</string>
    <string name="url_professor">professor_json/</string>
    <string name="url_oferecimento">oferecimento_json/</string>
    <string name="url_notificacao">notificacao_json/</string>
    <string name="url_remetente">remetente_json/</string>
    <string name="url_tipo_notificacao">tipo_notificacao_json/</string>
    <string name="url_local">local_json/</string>
    <string name="url_curso">curso_json/</string>

    <string name="json_token">token</string>
    <string name="json_id">id</string>
    <string name="json_group">group</string>
    <string name="json_prof">prof</string>

    <string name="json_male">Masculino</string>
    <string name="json_female">Feminino</string>

    <!--Authentication-->
    <string name="authorization">Authorization</string>

    <!--UserLogin form-->
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="lastName">Last Name</string>
    <string name="cpf">CPF</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Re-Password</string>
    <string name="send">Send</string>
    <string name="birthday">Birthday</string>
    <string name="sex">Sex</string>
    <string name="tipoFormacao">Education</string>
    <string name="formacao">Graduation</string>
    <string name="turma">Grade</string>
    <string name="funcao">Job</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="msg_changed">Data was changed</string>
    <string name="msg_not_creating_notification">There is no notify to be send</string>

    <!--Notification form-->
    <string name="time">00:00</string>
    <string name="date">0000-00-00</string>
    <string name="description">Description</string>
    <string name="find">Research</string>
    <string name="title">Title</string>
    <string name="notificationType">Notification Type</string>
    <string name="dateTime">Date/time</string>
    <string name="place">Place</string>
    <string name="sendNotify">Send Notification</string>
    <string name="setRemetent">Select Remetent</string>
    <string name="error_invalid_title">Title is empty</string>
    <string name="error_invalid_description">Description is empty</string>
    <string name="error_invalid_remetent">Remetent is empty</string>
    <string name="msg_send_notification">Sending notification</string>

    <!--Offering form-->
    <string name="offerDescription">Description</string>
    <string name="offerGoBack">Go Back</string>
    <string name="offerYear">Year</string>
    <string name="offerWeek">Day of Week</string>
    <string name="offerQtd">Quantity</string>
    <string name="offerTime">Time</string>
    <string name="offerInitials">Initials</string>
    <string name="offerClass">Class</string>
    <string name="offerProfessor">Professor</string>

    <!--Color Dialog-->
    <string name="set_color">Set color</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <!-- Maps -->
    <string name="title_activity_maps">Notification Dialog</string>
    <string name="go_mark">Go to mark</string>
    <string name="go_back">Go back</string>
    <string name="go_map">Go to map</string>

    <!-- Masks -->
    <string name="mask_date">yyyy-MM-dd</string>
    <string name="mask_time">kk:mm</string>

    <!-- Grid -->
    <string name="welcome">Welcome to notification application!</string>

    <!-- Activities -->
    <string name="nothingNotification">There is no notifications so far! Wait a moment or contact the Administrator.</string>
    <string name="nothingOffering">There is no offerings so far! Wait a moment or contact the Administrator.</string>
    <string name="nothingRemetent">There is no remetents so far! Wait a moment or contact the Administrator.</string>
</resources>
