<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.edu.ifspsaocarlos.sdm.notificacaoifsp.activity.CreateOffering">


    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="45"
                    android:enabled="false"
                    android:hint="@string/offerDescription" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtInitials"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtInitials"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="45"
                    android:enabled="false"
                    android:hint="@string/offerInitials" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtClass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtClass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="45"
                    android:enabled="false"
                    android:hint="@string/offerClass" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="45"
                    android:enabled="false"
                    android:hint="@string/offerYear" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtWeek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtWeek"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="45"
                    android:enabled="false"
                    android:hint="@string/offerWeek" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtQtd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtQtd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="45"
                    android:enabled="false"
                    android:hint="@string/offerQtd" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="45"
                    android:enabled="false"
                    android:hint="@string/offerTime" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtProfessor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtProfessor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="45"
                    android:enabled="false"
                    android:hint="@string/offerProfessor" />
            </android.support.design.widget.TextInputLayout>

<!--
            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtSpinnerYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/place" />
                <Spinner
                    android:id="@+id/spinnerYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtSpinnerSemester"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtSemester"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/place" />
                <Spinner
                    android:id="@+id/spinnerSemester"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtSpinnerTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/place" />
                <Spinner
                    android:id="@+id/spinnerTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtSpinnerQtd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtQtd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/place" />
                <Spinner
                    android:id="@+id/spinnerQtd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtInitials"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtInitials"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="45"
                    android:hint="@string/offerDescription" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtSpinnerClass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtClass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/place" />
                <Spinner
                    android:id="@+id/spinnerClass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtDH"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtDataHora"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dateTime"
                    />
                <TextView
                    android:id="@+id/txtInDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="@drawable/shape_border"
                    android:textSize="32dp"
                    android:hint="@string/date" />
            </android.support.design.widget.TextInputLayout>
-->
            <Space
                android:layout_weight=".2"
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <Button
                android:id="@+id/btnGoBack"
                android:layout_width="match_parent"
                android:text="@string/offerGoBack"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
